(library
 (name backend_foo_bar)
 (modules ())
 (inline_tests.backend
  (generate_runner
   (echo "let () = print_endline \"backend_foo_bar\""))))

(library
 (name compile_flags_test_with_invalid_flag)
 (inline_tests
  (backend backend_foo_bar)
  (compile_flags -flag-that-is-not-accepted-by-ocaml)))
