(library
 (name backend_foo)
 (modules ())
 (inline_tests.backend
  (generate_runner
   (echo "let () = print_endline \"backend_foo\""))))

(library
 (name unused_open_backend)
 (modules ())
 (inline_tests.backend
  (generate_runner
   (echo "
open Char
let () = print_endline \"unused_open_backend\""))))
